bikes-service-api/src/main/java/com/example/bikes_service_api/utils/ErrorHandling/Errors/DataUpdateException.java
package com.example.bikes_service_api.utils.ErrorHandling.Errors;

public class DataUpdateException extends RuntimeException{
    public DataUpdateException(String message){
        super(message);
    }
}
